--- a/suneee-ynt-web/src/main/webapp/WEB-INF/web.xml
+++ b/suneee-ynt-web/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
 
 
 	<!--  =======start apache shiro======================================== -->
-	<!-- The filter-name matches name of a 'shiroFilter' bean inside applicationContext.xml -->
+	<!-- The filter-name matches name of a 'shiroFilter' bean inside applicationContext.xml 
 	<filter>
 		<filter-name>shiroFilter</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -46,19 +46,18 @@
 			<param-name>targetFilterLifecycle</param-name>
 			<param-value>true</param-value>
 		</init-param>
-	</filter>
-
+	</filter>-->
 
 	<!-- Make sure any request you want accessible to Shiro is filtered. /* 
 		catches all -->
 	<!-- requests. Usually this filter mapping is defined first (before all 
 		others) to -->
 	<!-- ensure that Shiro works in subsequent filters in the filter chain: -->
-	<filter-mapping>
+	<!-- <filter-mapping>
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<!-- ===========end==================================== -->
+	===========end==================================== -->
 
 	<!-- encoding filter set utf-8 -->
 	<filter>
